# vote-bar

./: .dockerignore  .gitignore  Dockerfile  README.md  README_old.md  app.py  app_old.py  app_slider.py  docker-compose.yml  pyproject.toml  rebuild-docker.ps1  run.ps1
data/: .gitkeep
logic/: __init__.py  database.py  persistence.py  room_manager.py  vote_logic.py  vote_logic_old.py
scripts/: dev.py  docker.py
tests/: test_database.py  test_persistence.py  test_room_manager.py  test_vote_aggregation.py  test_vote_logic.py
